2015-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_pic.c and image/jpegimage.c: Fix a bug to include jpeg images
	correctly (borrowed from dvipdfm-x).

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/pngimage.c: Avoid PNG warnings.

2014-07-22  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex.web, xetex.ch, tex.ch0: Switch right-to-left support from
	e-TeX's TeX--XeT to Knuth's original TeX-XeT code (with some fixes and
	slight modification to the DVI opcode) to fix TeX--XeT paired specials
	issue.

2014-07-15  Khaled Hosny  <khaledhosny@eglug.org>
            Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex-bug73.test: Shell script for a new test.
	* tests/bug73.{log,tex} (new): Test input and expected output.
	* am/xetex.am: Adjusted.

2014-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex_version.h: 0.99992

2014-07-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.web: Remove unused variables k,and l in function
	get_strings_started, and q, and r in procedure set_math_char().
	* image/mfileio.c: Change type of a variable i in mfgets() in order to
	suppress warnings.
	* image/bmpimage.c: Remove an unused variable i in bmp_scan_file().
	* image/jpegimage.c: Remove an unused variable rational_value in
	read_APP1_Exif().
	* image/pngimage.c: Remove unused variables stream_data_ptr,
	trans_type, and rowbytes in png_scan_file().
	* XeTeXFontMgr_FC.cpp: Remove an unused label restart.

2014-05-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* image/bmpimage.c: Error exit instead of crashing for unsupported
	bmp in bmp_scan_file().

2014-04-28  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* XeTeX_ext.c: Accept Ctrl+Z as EOF in console (keyboard).
	(Windows only)

2014-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeXFontInst.cpp, XeTeXFontInst_Mac.cpp, XeTeXFontMgr.cpp,
	XeTeXFontMgr_FC.cpp, XeTeXLayoutInterface.cpp, XeTeXOTMath.cpp,
	hz.cpp, pdfimage.cpp: <w2c/config.h> is now C++ safe.
